--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   "author": "Kingsley Victor",
   "license": "ISC",
   "dependencies": {
+    "assert": "^2.0.0",
     "axios": "^1.4.0",
     "joi": "^17.9.2",
     "lodash": "^4.17.21"
   },
   "devDependencies": {
+    "@types/assert": "^1.5.6",
     "@types/joi": "^17.2.3",
     "@types/lodash": "^4.14.195",
     "typescript": "^5.1.3"
