--- a/src/config.json
+++ b/src/config.json
@@ -12,7 +12,9 @@
       "confirm_request": "/broker/confirm_ride_request/business",
       "initialize_batch_requests": "/broker/init_batch_requests/business",
       "confirm_batch_requests": "/broker/confirm_batch_requests/business",
-      "get_requests_by_account": "/requests/users/:userId"
+      "get_requests_by_account": "/requests/users/:userId",
+      "get_single_request": "/ride_request/:id",
+      "delete_single_request": "/broker/ride_delete/business"
     }
   }
 }
