--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "format": "prettier --write **/**/*.{ts,js,json}",
-    "build": "rm -rf dist && tsc"
+    "format": "prettier --write **/**/*.{ts,js,json,md}",
+    "build": "rm -rf dist && tsc",
+    "prepublishOnly": "yarn build && yarn format"
   },
   "author": "Kingsley Victor",
   "license": "ISC",
@@ -21,5 +22,13 @@
     "@types/joi": "^17.2.3",
     "@types/lodash": "^4.14.195",
     "typescript": "^5.1.3"
+  },
+  "files": [
+    "dist",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Kwikpik/kwikpik.js.git"
   }
 }
