--- a/package.json
+++ b/package.json
@@ -30,5 +30,10 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Kwikpik/kwikpik.js.git"
-  }
+  },
+  "keywords": [
+    "kwikpik",
+    "logistics",
+    "delivery"
+  ]
 }
