--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "baseProdUrl": "https://gateway.kwikpik.io/api",
-  "baseDevUrl": "http://52.71.120.55:14500/api",
+  "baseDevUrl": "http://dev-gateway.kwikpik.io/api",
   "paths": {
     "account": {
       "authenticate": "/business/authenticate",
