--- a/src/config.json
+++ b/src/config.json
@@ -1,6 +1,6 @@
 {
   "baseProdUrl": "https://gateway.kwikpik.io/api",
-  "baseDevUrl": "http://dev-gateway.kwikpik.io/api",
+  "baseDevUrl": "https://dev-gateway.kwikpik.io/api",
   "paths": {
     "account": {
       "authenticate": "/business/authenticate",
@@ -10,8 +10,6 @@
     "requests": {
       "initialize_request": "/broker/init_request_ride/business",
       "confirm_request": "/broker/confirm_ride_request/business",
-      "initialize_batch_requests": "/broker/init_batch_requests/business",
-      "confirm_batch_requests": "/broker/confirm_batch_requests/business",
       "get_requests_by_account": "/requests/users/:userId",
       "get_single_request": "/ride_request/:id",
       "delete_single_request": "/broker/ride_delete/business",
